css/globals.css
/* ... */
.funnel-simple {
  height: 24px;
  min-width: 24px;
  position: relative;
}

.sort-by {
  letter-spacing: 0;
  line-height: 24px;
  margin-top: -1.00px;
  position: relative;
  white-space: nowrap;
  width: fit-content;
}

.caret-down {
  height: 16px;
  min-width: 16px;
  position: relative;
}

.frame-23 {
  align-items: flex-start;
  display: flex;
  flex: 1;
  flex-direction: column;
  gap: 12px;
  position: relative;
}

.frame-28 {
  align-items: flex-start;
  align-self: stretch;
  display: flex;
  flex-direction: column;
  gap: 6px;
  position: relative;
}

.frame-29 {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
  gap: 4px;
  position: relative;
  width: fit-content;
}

.frame-27 {
  align-items: center;
  display: flex;
  gap: 12px;
  position: relative;
  width: fit-content;
}

.linear-company {
  letter-spacing: 0;
  line-height: 27px;
  margin-top: -1.00px;
  position: relative;
  white-space: nowrap;
  width: fit-content;
}

.frame-30 {
  align-items: center;
  display: flex;
  gap: 12px;
  justify-content: center;
  position: relative;
  width: fit-content;
}

.ellipse {
  background-color: var(--licorice-2);
  border-radius: 1px;
  height: 2px;
  min-width: 2px;
  position: relative;
}

.clock {
  height: 16px;
  min-width: 16px;
  position: relative;
}

.currency-dollar {
  height: 16px;
  min-width: 16px;
  position: relative;
}

.calendar-blank {
  height: 16px;
  min-width: 16px;
  position: relative;
}

.mollit-in-laborum-te {
  align-self: stretch;
  letter-spacing: 0;
  line-height: 24px;
  position: relative;
}

.x30-32k {
  letter-spacing: 0;
  line-height: 24px;
  margin-top: -1.00px;
  position: relative;
  white-space: nowrap;
  width: fit-content;
}

.pagination {
  align-items: center;
  display: flex;
  gap: 16px;
  justify-content: center;
  position: relative;
  width: fit-content;
}

.button-3 {
  background-color: var(--meliteh-red);
  border-radius: 2px;
  gap: 4px;
  height: 40px;
  padding: 8px 16px;
  width: 40px;
}

.number-1 {
  color: var(--neutral100);
  font-family: var(--font-family-dm_sans);
  font-size: var(--font-size-m);
  font-weight: 700;
  letter-spacing: 0;
  line-height: 24px;
  margin-top: -1.00px;
  position: relative;
  white-space: nowrap;
  width: fit-content;
}

.button-1 {
  background-color: var(--neutral100);
  border: 1px solid;
  border-color: var(--licorice-4);
  border-radius: 2px;
  gap: 4px;
  height: 40px;
  padding: 8px 16px;
  width: 40px;
}

.number {
  letter-spacing: 0;
  line-height: 24px;
  margin-left: -1.00px;
  margin-right: -1.00px;
  margin-top: -1.00px;
  position: relative;
  white-space: nowrap;
  width: fit-content;
}

.more-option {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
  gap: 16px;
  position: relative;
  width: fit-content;
}

.frame-1-1 {
  align-items: flex-start;
  background-color: var(--neutral100);
  border: 1px solid;
  border-color: var(--neutral300);
  border-radius: 20px;
  box-shadow: 0px 5px 14px #080f340a;
  display: flex;
  flex-direction: column;
  gap: 16px;
  overflow: hidden;
  padding: 24px;
  position: relative;
  width: 250px;
}

.frame-3-3 {
  align-items: flex-start;
  flex-direction: column;
  gap: 16px;
}

.email-me-for-jobs {
  align-self: stretch;
  letter-spacing: 0;
  line-height: 30px;
  margin-top: -1.00px;
  position: relative;
}

.x-eiusmod {
  align-self: stretch;
  letter-spacing: 0;
  line-height: 21px;
  margin-top: -1.00px;
  position: relative;
}

.namemailcom {
  letter-spacing: 0;
  line-height: 24px;
  margin-top: -1.00px;
  position: relative;
  white-space: nowrap;
  width: fit-content;
}

.button-4 {
  background-color: var(--meliteh-red);
  border-radius: 4px;
  gap: 8px;
  padding: 8px 20px 8px 16px;
  width: 202px;
}

.subcribe {
  letter-spacing: 0;
  line-height: 24px;
  position: relative;
  white-space: nowrap;
  width: fit-content;
}

.get-noticed-faster {
  align-self: stretch;
  letter-spacing: 0;
  line-height: 30px;
  margin-top: -1.00px;
  position: relative;
}

.button-5 {
  align-self: stretch;
  background-color: var(--meliteh-red);
  border-radius: 4px;
  gap: 8px;
  padding: 8px 20px 8px 16px;
}

.upload-your-resume {
  letter-spacing: 0;
  line-height: 24px;
  position: relative;
  white-space: nowrap;
  width: fit-content;
}

.ellipse-container {
  height: 469px;
  left: 208px;
  position: absolute;
  top: 216px;
  width: 442px;
}

.ellipse-2 {
  background-color: var(--meliteh-red);
  border-radius: 156.38px;
  height: 313px;
  left: 0;
  position: absolute;
  top: 6px;
  width: 313px;
}

.ellipse-4 {
  background-color: var(--crimson);
  border-radius: 156.38px;
  height: 313px;
  left: 75px;
  position: absolute;
  top: 156px;
  width: 313px;
}

.ellipse-3 {
  background-color: var(--froly);
  border-radius: 156.38px;
  height: 313px;
  left: 129px;
  position: absolute;
  top: 0;
  width: 313px;
}

.ellipse-5-1 {
  -webkit-backdrop-filter: blur(140.13px) brightness(100%);
  backdrop-filter: blur(140.13px) brightness(100%);
  background-color: var(--white-2);
  border-radius: 393.82px;
  height: 788px;
  left: 0;
  position: absolute;
  top: 0;
  width: 788px;
}

.link {
  cursor: pointer;
  letter-spacing: 0;
  line-height: normal;
  margin-top: -1.00px;
  position: relative;
  white-space: nowrap;
  width: fit-content;
}

.vector-41 {
  height: 2px;
  margin-right: 2.0px;
  margin-top: -1px;
}

.meliteh-all-right-reserved {
  letter-spacing: 0;
  line-height: normal;
  margin-right: 2.0px;
  min-height: 15px;
  min-width: 154px;
}

.address-7 {
  letter-spacing: 0;
  line-height: 24px;
  margin-top: -1.00px;
  position: relative;
  white-space: nowrap;
  width: fit-content;
}

.button-6 {
  align-items: center;
  display: flex;
  justify-content: center;
  position: relative;
}

.calendar-blank-6 {
  height: 16px;
  min-width: 16px;
  position: relative;
}

.clock-6 {
  height: 16px;
  min-width: 16px;
  position: relative;
}
/* ... */

